# wit-notify

./: Cargo.toml
config/: wit-notify.yml
src/: config.rs  db.rs  log.rs  main.rs
src/bbs/: data.rs  mod.rs
