[package]
name = "wit-notify"
version = "1.0.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]

# mesagisto-client = { git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git", branch = "master"}
mesagisto-client = { path = "/home/itsusinn/Workspace/Code/mesagisto/mesagisto-client/rust" }
singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", branch = "master"}
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }


tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "signal", "io-std"] }
futures-util = "0.3.21"

arcstr = "1.1.4"
uuid = "1.2.1"
dashmap = "5.4.0"
base64-url = "1.4.13"
either = "1.7.0"
once_cell = "1.15.0"
educe = { version = "0.4.19", default-features = false, features = ["Default"] }

serde = "1.0.140"
serde_json = "1.0.87"
serde_yaml = "0.9.13"

yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"

# error handling
thiserror = "1.0.35"
color-eyre = "0.6.2"
tracing-error = "0.2.0"
color-spantrace = "0.2.0"

# logging
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
colored = "2.0.0"
chrono = "0.4.22"
time = { version = "0.3.11", features = ["macros", "local-offset"] }

# database
sled = "0.34.7"

reqwest = { version = "0.11", default-features = false,features = ["json","rustls"] }

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = true
